# gwexpy

./: -files *.ipynb  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY_CHECKLIST.md  CONTRIBUTING.md  FIX_REQUIRED_LIST.md  LICENSE.txt  MAINTAINERS.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORTED_IO_MATRIX.md  analyze_imports.py  collected_tests.txt  debug_simpeg_import.py  debug_simpeg_objects.py  debug_simpeg_objects_pt2.py  demo.h5  doc_fails.json  environment.yml  fix_demo_import.py  fix_notebook.py  fix_notebook_spectrum.py  fix_stlt_nb.py  generate_api_reference.py  genindex.html  implement_fitting_mcmc.py  implementation_plan.md  index.html  inspect_notebook.py  inspect_notebook_spectrum.py  inspect_timeseries_extra.py  (+28 more)
.agent/: AGENTS.md  HANDOVER_INSTRUCTIONS.md  agents  backlog-normalization-ledger-2026-04-21.tsv  comprehensive_improvement_plan.md  gwexpy_improvement_tasks.md  hooks  improvement_tasks.md  integrated_work_plan_post_codex_20260127_181313.md  next_task_prompt.md  rules  skills  skills_index.md  workflows
.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
.gemini/: code_review_report_2026-01-04.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.harness/: AGENTS.md  README.md
_modules/: index.html
api/: analysis.html  frequencyseries.html  index.html  noise.html  spectral.html  spectrogram.html  timeseries.html  types.html
bruco_report/: index.html
devel/: benchmark_fields.py
docs/: .buildinfo  Array_extensions.csv  FrequencySeriesDict_extension.csv  FrequencySeriesList_extensions.csv  FrequencySeriesMatrix_extensions.csv  FrequencySeries_extensions.csv  FrequencySeries_methods.csv  NOTEBOOK_POLICY.md  Plot_extensions.csv  SpectrogramDict_extension.csv  SpectrogramList_extensions.csv  SpectrogramMatrix_extensions.csv  Spectrogram_extensions.csv  Spectrogram_methods.csv  TimeSeriesDict_extention.csv  TimeSeriesList_extensions.csv  TimeSeries_extensions.csv  TimeSeries_methods.csv  Time_extensions.csv  conf.py  fix_summary_jp.md  genindex.html  index.html  index.rst  installation.rst  interop_matrix.csv  intersphinx_registry.py  io_support.csv  objects.inv  py-modindex.html  quickstart.rst  requirements.txt  search.html  searchindex.js  sitemap.xml  translate_po.py
docs_internal/: PEMinjection-with-SegmentTable.md  README.md
en/: .buildinfo  contract.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
examples/: README.md  demo.h5  example_active-damping.ipynb  example_bootstrap-spectral.ipynb  example_calibration.ipynb  example_coupling-analysis.ipynb  example_lockin-detection.ipynb  example_noise-budget.ipynb  example_response-analysis.ipynb  example_signal-extraction.ipynb  example_transfer-function.ipynb  example_trend-analysis.ipynb  example_wiener-filter.ipynb  executed_tutorial.ipynb  fitting_demo.ipynb  fitting_demo.ipynb.bak  frequencyseries_new_methods.ipynb  frequencyseriesmatrix_tutorial.ipynb  gwexpy_features_tutorial.ipynb  gwexpy_frequencyseries_tutorial.ipynb  interop_tutorial.ipynb  intro_BifrequencyMap.ipynb  intro_Fitting.ipynb  intro_FrequencySeries.ipynb  intro_FrequencySeriesMatrix.ipynb  intro_Interop.ipynb  intro_MapPlotting.ipynb  intro_Noise.ipynb  intro_PeakDetection.ipynb  intro_Plot.ipynb  intro_SeriesMatrix-base.ipynb  intro_Spectrogram-containers.ipynb  intro_SpectrogramMatrix.ipynb  intro_TimeSeries.ipynb  intro_TimeSeries.ipynb.bak2  intro_TimeSeriesMatrix.ipynb  intro_time-operations.ipynb  peak_detection_demo.py  plot_field4d_demo.py  plot_scalarfield_demo.py  (+22 more)
gwexpy/: __init__.py  _bootstrap.py  _version.py  _warnings.py  conftest.py
gwexpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ja/: .buildinfo  contract.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
logs_53253574531/: 0_test (3.10).txt
notebooks/: 01_transfer_function_workflow.ipynb  01_transfer_function_workflow.py  02_coherence_ranking.ipynb  02_coherence_ranking.py  README.md
reports/: timeseries_a2_classification_suspects.md  timeseries_a2_inventory_diff.md  timeseries_ledger_diff_summary.txt
scratch/: analyze_logs.py  fetch_logs.py
scripts/: README.md  audit_numerical_risks.py  bruco_bench.py  check_docs_sync.py  check_external_links.py  check_forbidden_artifacts.py  check_non_ascii.py  check_release_artifacts.py  check_release_metadata.py  check_repo_hygiene.py  check_terms.py  extend_fitting_notebook.py  fix_notebooks_warnings.py  fix_notebooks_warnings_v2.py  fix_notebooks_warnings_v3.py  fix_scalarfield_notebook.py  fix_tutorial_notebooks.py  generate_cagmon_tutorial.py  generate_hero_plot.py  generate_thumbnails.py  generate_viz_tutorial.py  install_minepy.py  make_bruco_advanced_notebook.py  make_bruco_ica_notebook.py  make_control_tutorial.py  make_peak_tracking_notebook.py  make_scalarfield_tutorial.py  make_schumann_notebook.py  make_spectrogram_processing_notebook.py  make_violin_mode_notebook.py  run_all_notebooks.py  run_quickstart_test.py  strip_example_notebook_outputs.py  terms.csv  update_intersphinx_inventories.py  validate_io_improvements.py  verify_scalarfield_noise.py  verify_scalarfield_physics.py  verify_spectral_density_physics.py  verify_timeseries_attrs.py
tests/: conftest.py  run_gui_nds_tests.sh  run_gui_tests.sh  signal_all_defs_classified.csv  test_a2_integration.py  test_bruco.py  test_check_changed_notebooks_script.py  test_check_forbidden_artifacts_script.py  test_check_release_artifacts_script.py  test_check_release_metadata_script.py  test_check_repo_hygiene_script.py  test_compatibility_fixes.py  test_conda_forge_roadmap.py  test_correlation.py  test_dttxml_loading.py  test_fitting.py  test_fitting_gls.py  test_fitting_highlevel.py  test_fitting_mcmc.py  test_fitting_plot.py  test_geomap.py  test_import_order.py  test_interop_control.py  (+14 more)
(+5328 files in other folders)
