[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwexpy"
version = "0.1.0b1"
description = "A comprehensive Python package for Gravitational Wave experimental data analysis, extending GWpy with strict unit handling and advanced spectral methods."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tatsuki Washimi", email = "tatsuki.washimi@example.com"}
]
keywords = [
    "gravitational-waves",
    "gwpy",
    "signal-processing",
    "time-series",
    "spectral-analysis",
    "physics",
    "astronomy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
dependencies = [
  "astropy>=5.0",
  "gwpy>=3.0.0",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scipy>=1.7.0",
  "matplotlib>=3.5.0",
  "lalsuite",
  "gwdatafind",
  "gwosc",
  "gpstime",
  "igwn-segments",
  "ligo.skymap",
  "ligotimegps",
  "dqsegdb2",
  "dateparser",
  "h5py",
  "typing_extensions"
]

[project.urls]
Homepage = "https://github.com/tatsuki-washimi/gwexpy"
Repository = "https://github.com/tatsuki-washimi/gwexpy"
Documentation = "https://tatsuki-washimi.github.io/gwexpy/"
Changelog = "https://github.com/tatsuki-washimi/gwexpy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "freezegun",
  "requests-mock",
  "ruff",
  "mypy",
  "types-requests",
  "PyQt5",
  "pyqtgraph",
  "qtpy",
]
gw = [
  "pycbc",
  "nds2-client",
  "python-framel",
  "ldas-tools-framecpp",
  "gwinc",
  "dttxml",
  "nptdms"
]
stats = [
  "polars",
  "scikit-learn",
  "statsmodels",
  "pmdarima",
  "mictools",
  "minepy",
  "dcor",
  "hurst",
  "hurst-exponent",
  "exp-hurst",
  "bottleneck"
]
fitting = ["iminuit", "emcee", "corner"]
astro = ["specutils", "pyspeckit"]
geophysics = [
  "obspy",
  "mth5",
  "mtpy",
  "mt_metadata",
  "netCDF4",
]
audio = ["librosa", "pydub"]
bio = ["mne", "elephant", "neo"]
interop = [
  "torch", "tensorflow", "jax", "jaxlib", "dask", "zarr", "cupy",
  "xarray", "quantities", "simpeg"
]
control = ["control"]
gui = ["PyQt5", "pyqtgraph", "qtpy", "sounddevice"]
plot = ["pygmt"]
analysis = [
    "PyEMD",
    "pywt",
    "librosa",
    "obspy"
]
all = [
    "pycbc", "nds2-client", "python-framel", "ldas-tools-framecpp", "gwinc", "dttxml", "nptdms",
    "polars", "scikit-learn", "statsmodels", "pmdarima", "mictools", "minepy", "dcor", "hurst", "hurst-exponent", "exp-hurst", "bottleneck",
    "iminuit", "emcee", "corner",
    "specutils", "pyspeckit",
    "obspy", "mth5", "mtpy", "mt_metadata", "netCDF4",
    "librosa", "pydub",
    "mne", "elephant", "neo",
    "torch", "tensorflow", "jax", "jaxlib", "dask", "zarr", "cupy", "simpeg",
    "xarray", "quantities",
    "control", "PyQt5", "pyqtgraph", "qtpy", "sounddevice",
    "pygmt",
    "PyEMD", "pywt"
]

[tool.setuptools.package-data]
gwexpy = ["py.typed"]

[tool.setuptools.packages.find]
include = ["gwexpy*"]
exclude = ["typings*", "tests*", "docs*", "examples*"]

[project.scripts]
"gwexpy" = "gwexpy.cli:main"
"gwexpy.gui" = "gwexpy.gui.pyaggui:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    # Allow module-level imports not at top (for circular import avoidance and optional deps)
    "E402",
    # Allow multiple statements on one line (for compact GUI code)
    "E701",
    "E702",
    # Allow long lines (many scientific expressions are naturally long)
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Tests and examples: allow unused imports (for availability checks)
"tests/*" = ["F401", "E741"]
"examples/*" = ["F401", "E741"]
"gwexpy/*/tests/*" = ["F401", "E741"]
# GUI code: compact style is acceptable
"gwexpy/gui/*" = ["E701", "E702"]
"docs/guide/tutorials/22_hht.ipynb" = ["F401"]
"examples/advanced-methods/tutorial_Bruco.ipynb" = ["F811", "F821"]
"examples/advanced-methods/tutorial_ShortTimeLaplaceTransformation.ipynb" = ["F404", "UP035"]
"gwexpy/interop/root_.py" = ["UP045"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = "gwexpy/(gui/.*)|tests/.*"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["gwexpy/gui/reference-dtt"]
qt_api = "pyqt5"
markers = [
    "gui: GUI integration tests",
    "nds: NDS server connection tests",
    "cvmfs: tests requiring CVMFS access (from gwpy)",
    "freeze_time: tests that use freezegun to mock time",
    "long: long running tests",
]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten. gwpy.testing.fixtures:pytest.PytestAssertRewriteWarning",
    "ignore:Compatibility support for python2 has been dropped:DeprecationWarning:declarative.utilities.representations",
    "ignore:divide by zero encountered in divide:RuntimeWarning:tests.fields.test_scalarfield_fft_space",
    "ignore:.*scitokens.*:DeprecationWarning",
    "ignore:.*dateparser.*:DeprecationWarning",
    "ignore:.*dateparser.*:PendingDeprecationWarning",
    "ignore:.*numpy.*deprecated.*:DeprecationWarning",
    "ignore:.*dubious year.*:erfa.core.ErfaWarning",
    "ignore:The Spectrum1D class is deprecated.*:astropy.utils.exceptions.AstropyDeprecationWarning",
    "ignore:This process .* use of fork\\(\\) may lead to deadlocks.*:DeprecationWarning",
    "ignore:.*contains multiple slashes, which is discouraged by the FITS standard:astropy.units.core.UnitsWarning",
    "ignore:invalid value encountered in cast:RuntimeWarning:astropy.units.quantity",
    "ignore:Animation was deleted without rendering anything.*:UserWarning:matplotlib.animation",
    "ignore:divisions involving a unit and a 'str' instance are deprecated since v7.1.*:astropy.utils.exceptions.AstropyDeprecationWarning",
    "ignore:The module `astropy.cosmology.core` is deprecated since v7.1.*:DeprecationWarning:astropy.cosmology.core",
    "ignore:xindex was given to .*\\(\\), x0 will be ignored:UserWarning:gwpy.types.series",
    "ignore:xindex was given to .*\\(\\), dx will be ignored:UserWarning:gwpy.types.series",
    "ignore:yindex was given to .*\\(\\), dy will be ignored:UserWarning:gwpy.types.array2d",
    "ignore:invalid value encountered in power:RuntimeWarning:gwpy.table",
    "ignore:Replacing existing TH1.*:RuntimeWarning",
    "ignore:Support for identity-based X.509 credentials for LIGO.ORG is being dropped.*:DeprecationWarning:igwn_auth_utils.requests",
    "ignore:Converting time units .* to GPS seconds for alignment.:UserWarning:gwexpy.timeseries.preprocess",
    "ignore:Sample rates differ, downsampling to match.:UserWarning:gwexpy.timeseries._signal",
]



[[tool.mypy.overrides]]
module = [
  "gwexpy.timeseries.pipeline",
  "gwexpy.timeseries.io.win",
  "gwexpy.timeseries.io.tdms",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "gwexpy.types.series_matrix_math",
  "gwexpy.types.series_matrix_validation_mixin",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "gwexpy.types.mixin.mixin_legacy",
  "gwexpy.types.mixin.signal_interop",
  "gwexpy.types.axis_api",
  "gwexpy.types.array3d",
]
ignore_errors = true
