[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwexpy"
version = "0.1.0"
description = "A comprehensive Python package for Gravitational Wave experimental data analysis, extending GWpy with strict unit handling and advanced spectral methods."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Tatsuki Washimi"}
]
keywords = [
    "gravitational-waves",
    "gwpy",
    "signal-processing",
    "time-series",
    "spectral-analysis",
    "physics",
    "astronomy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
dependencies = [
  # Core & Computation
  "numpy>=1.21.0,<2.0.0",
  "scipy>=1.7.0",
  "astropy>=5.0",
  "gwpy>=4.0.0,<5.0.0",
  "pandas>=1.3.0",
  "matplotlib>=3.5.0",
  "typing_extensions",
  "bottleneck",
  # File I/O
  "h5py",
  # GPS Time (lightweight, widely used)
  "igwn-segments",
  "ligotimegps",
  "gpstime",
]

[project.urls]
Homepage = "https://github.com/tatsuki-washimi/gwexpy"
Repository = "https://github.com/tatsuki-washimi/gwexpy"
Documentation = "https://tatsuki-washimi.github.io/gwexpy/"
Changelog = "https://github.com/tatsuki-washimi/gwexpy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Signal analysis and statistics
analysis = [
  "scikit-learn",
  "statsmodels",
  "pmdarima",
  "dcor",
  "hurst",
  "hurst-exponent",
  "exp-hurst",
  "EMD-signal",
  "PyWavelets",
]

# Curve fitting and MCMC
fitting = [
  "iminuit",
  "emcee",
  "corner",
]

# Control systems analysis
control = [
  "control",
]

# Seismic and magnetotelluric data
seismic = [
  "obspy",
  "mth5",
  "mtpy",
  "mt_metadata",
]

# Gravitational wave data access and tools
gw = [
  "lalsuite",
  "gwdatafind",
  "gwosc",
  "dqsegdb2",
  "dttxml",
  "gwinc",
  "ligo.skymap",
]

# Experimental data I/O
io = [
  "nptdms",
]

# Advanced plotting
plotting = [
  "pygmt",
]

# Audio processing
audio = [
  "pydub",
  "tinytag>=1.10",
]

# GUI (experimental, not included in v0.1.0 release)
gui = [
  "PyQt5",
  "pyqtgraph",
  "qtpy",
  "sounddevice",
]

# Development tools
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-qt",
  "pytest-xvfb",
  "debugpy",
  "pytest-cov",
  "nbmake",
  "freezegun",
  "requests-mock",
  "types-requests",
]

# Convenience: install all optional features
all = [
  "gwexpy[analysis]",
  "gwexpy[fitting]",
  "gwexpy[control]",
  "gwexpy[seismic]",
  "gwexpy[gw]",
  "gwexpy[io]",
  "gwexpy[plotting]",
  "gwexpy[audio]",
]

[tool.setuptools.package-data]
gwexpy = [
  "py.typed",
]

[tool.setuptools.packages.find]
include = ["gwexpy*"]
exclude = ["typings*", "tests*", "docs*", "examples*"]

[project.scripts]
"gwexpy" = "gwexpy.cli:main"
"gwexpy.gui" = "gwexpy.gui.pyaggui:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".conda-envs",
  ".conda-pkgs",
  ".mypy_cache",
  ".pytest_cache",
  "dist",
  "gwexpy.egg-info",
  "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    # Allow module-level imports not at top (for circular import avoidance and optional deps)
    "E402",
    # Allow multiple statements on one line (for compact GUI code)
    "E701",
    "E702",
    # Allow long lines (many scientific expressions are naturally long)
    "E501",
    # Python 3.9 compatibility: `X | Y` / `X | None` syntax is not supported.
    # Keep `typing.Union` / `typing.Optional` in runtime annotations where needed.
    "UP007",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
# Tests and examples: allow unused imports (for availability checks)
"tests/*" = ["F401", "E741"]
"examples/*" = ["F401", "E741"]
"gwexpy/*/tests/*" = ["F401", "E741"]
# GUI code: compact style is acceptable; allow Optional/Union for py39 runtime safety
"gwexpy/gui/*" = ["E701", "E702", "UP045"]
"gwexpy/astro/range.py" = ["F401"]
"gwexpy/cli/*.py" = ["F401"]
"gwexpy/detector/channel.py" = ["F401"]
"gwexpy/detector/units.py" = ["F401"]
"gwexpy/detector/io/*.py" = ["F401"]
"gwexpy/frequencyseries/_fdcommon.py" = ["F401"]
"gwexpy/frequencyseries/hist.py" = ["F401"]
"gwexpy/frequencyseries/io/*.py" = ["F401"]
"gwexpy/io/datafind.py" = ["F401"]
"gwexpy/io/ffldatafind.py" = ["F401"]
"gwexpy/io/gwf.py" = ["F401"]
"gwexpy/io/hdf5.py" = ["F401"]
"gwexpy/io/kerberos.py" = ["F401"]
"gwexpy/io/ligolw.py" = ["F401"]
"gwexpy/io/nds2.py" = ["F401"]
"gwexpy/io/registry.py" = ["F401"]
"gwexpy/plot/axes.py" = ["F401"]
"gwexpy/plot/bode.py" = ["F401"]
"gwexpy/plot/colorbar.py" = ["F401"]
"gwexpy/plot/colors.py" = ["F401"]
"gwexpy/plot/gps.py" = ["F401"]
"gwexpy/plot/legend.py" = ["F401"]
"gwexpy/plot/log.py" = ["F401"]
"gwexpy/plot/rc.py" = ["F401"]
"gwexpy/plot/segments.py" = ["F401"]
"gwexpy/plot/tex.py" = ["F401"]
"gwexpy/plot/text.py" = ["F401"]
"gwexpy/plot/units.py" = ["F401"]
"gwexpy/segments/flag.py" = ["F401"]
"gwexpy/segments/segments.py" = ["F401"]
"gwexpy/segments/io/*.py" = ["F401"]
"gwexpy/signal/filter_design.py" = ["F401"]
"gwexpy/signal/qtransform.py" = ["F401"]
"gwexpy/signal/spectral/*.py" = ["F401"]
"gwexpy/signal/window.py" = ["F401"]
"gwexpy/spectrogram/coherence.py" = ["F401"]
"gwexpy/spectrogram/io/__init__.py" = ["F401"]
"gwexpy/spectrogram/io/hdf5.py" = ["F401"]
"docs/guide/tutorials/22_hht.ipynb" = ["F401"]
"examples/advanced-methods/tutorial_Bruco.ipynb" = ["F811", "F821"]
"docs/web/en/user_guide/tutorials/advanced_hht.ipynb" = ["F401", "F811", "F821", "I001", "W291", "W293"]
"examples/advanced-methods/tutorial_ShortTimeLaplaceTransformation.ipynb" = ["F404", "UP035"]
"examples/case-studies/example_bootstrap-spectral.ipynb" = ["F821"]
"gwexpy/interop/root_.py" = ["UP045"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
exclude = "gwexpy/gui/reference-dtt/.*|gwexpy/gui/reference_ndscope/.*|tests/.*"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["gwexpy/gui/reference-dtt"]
markers = [
    "gui: GUI integration tests",
    "nds: NDS server connection tests",
    "cvmfs: tests requiring CVMFS access (from gwpy)",
    "freeze_time: tests that use freezegun to mock time",
    "long: long running tests",
    "flaky: mark test as flaky (used by gwpy)",
]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten. gwpy.testing.fixtures:pytest.PytestAssertRewriteWarning",
    "ignore:Compatibility support for python2 has been dropped:DeprecationWarning:declarative.utilities.representations",
    "ignore:divide by zero encountered in divide:RuntimeWarning:tests.fields.test_scalarfield_fft_space",
    "ignore:.*scitokens.*:DeprecationWarning",
    "ignore:.*dateparser.*:DeprecationWarning",
    "ignore:.*dateparser.*:PendingDeprecationWarning",
    "ignore:.*numpy.*deprecated.*:DeprecationWarning",
    "ignore:.*dubious year.*:erfa.core.ErfaWarning",
    "ignore:The Spectrum1D class is deprecated.*:astropy.utils.exceptions.AstropyDeprecationWarning",
    "ignore:This process .* use of fork\\(\\) may lead to deadlocks.*:DeprecationWarning",
    "ignore:.*contains multiple slashes, which is discouraged by the FITS standard:UserWarning",
    "ignore:invalid value encountered in cast:RuntimeWarning:astropy.units.quantity",
    "ignore:Animation was deleted without rendering anything.*:UserWarning:matplotlib.animation",
    "ignore:divisions involving a unit and a 'str' instance are deprecated since v7.1.*:astropy.utils.exceptions.AstropyDeprecationWarning",
    "ignore:The module `astropy.cosmology.core` is deprecated since v7.1.*:DeprecationWarning:astropy.cosmology.core",
    "ignore:xindex was given to .*\\(\\), x0 will be ignored:UserWarning:gwpy.types.series",
    "ignore:xindex was given to .*\\(\\), dx will be ignored:UserWarning:gwpy.types.series",
    "ignore:yindex was given to .*\\(\\), dy will be ignored:UserWarning:gwpy.types.array2d",
    "ignore:invalid value encountered in power:RuntimeWarning:gwpy.table",
    "ignore:Replacing existing TH1.*:RuntimeWarning",
    "ignore:Support for identity-based X.509 credentials for LIGO.ORG is being dropped.*:DeprecationWarning:igwn_auth_utils.requests",
    "ignore:Converting time units .* to GPS seconds for alignment.:UserWarning:gwexpy.timeseries.preprocess",
    "ignore:Sample rates differ, downsampling to match.:UserWarning:gwexpy.timeseries._signal",
]



[[tool.mypy.overrides]]
module = [
  "gwexpy.types.series_matrix_math",
  "gwexpy.types.series_matrix_validation_mixin",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "gwexpy.astro.range",
  "gwexpy.cli.*",
  "gwexpy.detector.channel",
  "gwexpy.detector.io.*",
  "gwexpy.detector.units",
  "gwexpy.frequencyseries._fdcommon",
  "gwexpy.io.ffldatafind",
  "gwexpy.plot.*",
  "gwexpy.segments.io.*",
  "gwexpy.signal.spectral.*",
  "gwexpy.spectrogram.coherence",
]
disable_error_code = ["no-redef"]

[[tool.mypy.overrides]]
module = [
  "gwexpy.types.seriesmatrix_validation",
  "gwexpy.frequencyseries.collections",
]
ignore_errors = false

[tool.coverage.run]
source = ["gwexpy"]
omit = [
    "gwexpy/gui/*",
    "gwexpy/cli/*",
    "*/test*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"
